--- a/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_top.html.twig
@@ -1,6 +1,6 @@
 
       <h3>超值低价</h3>
-      <div class="menu"><a class="more" href="#">刷新</a></div>
+      <div class="menu"><a class="more" href="#">换一批</a></div>
       <ul class="clearfix">
          {% for row in ghs_pdts %}
              {% if 0 == loop.index % 3 %}
