--- a/web/css140307/checkin.css
+++ b/web/css140307/checkin.css
@@ -36,7 +36,8 @@
     padding: 5px 0;
     position: relative;
     text-align: center;
-    #width: 160px;
+    width: 160px;
+	margin:0;
 }
 #signInFrame li a:hover {
     text-decoration: none;
