--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -1,4 +1,5 @@
-body{ font-family: '微软雅黑','宋体'; font-size:12px; background-color:#F6F6F6;}
+/*body{ font-family: '微软雅黑','宋体'; }*/
+body, button, input, select, textarea {font: 12px/1.5 tahoma,'Hiragino Sans GB','microsoft yahei',sans-serif; font-size:12px; color:#666; background-color:#f4f4f4;}
 .page{ width:1150px; margin:auto;}
 .pageMain{ padding:15px 0;}
 .fl{float:left;}
@@ -9,7 +10,9 @@ body{ font-family: '微软雅黑','宋体'; font-size:12px; background-color:#F6
 .w834{ width:834px;}
 .w930{ width:930px;}
 .h340{ height:340px;}
-.module{ border:1px solid #E0E0E0;}
+strong, b{font-weight: bold;}
+.corLightRed{ color:#ff6b4f;}
+.module{ border:2px solid #ff6b4f;}
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{ color:#666;}
 #header{ width:100%;}
 #header #topbar{ background-color:#F6F6F6; width:100%; border-bottom:1px solid #E0E0E0; height:30px; line-height:30px; color:#666;}
@@ -17,7 +20,7 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 #userbar li{ float:left; line-height: 28px;}
 #userbar li.split { background: none repeat scroll 0 0 #CCC; color: #CCC; height: 12px; margin: 9px; width: 1px; overflow:hidden;}
 #userbar li a{ background:url(../images140307/iconImage.png) no-repeat; cursor:pointer;}
-#userbar li a.message{ padding-left: 20px; background-position: left 3px;}
+#userbar li a.message{ padding-left: 20px; background-position: left 3px; color:#666;}
 #userbar li a.personal{ background-position: 53px -23px; padding-right: 10px;}
 #userbar  #userFrame {background-color: #FFFFFF;border: 1px solid #e0e0e0; display: none;left: 0;position: absolute;top: 30px; width: 100%; z-index: 8000;}
 #userbar  #userFrame .userInfo { background:url("../images140307/iconImage.png") no-repeat scroll 10px -447px; border-bottom: 1px solid #EEEEEE; margin-bottom: 5px; padding: 5px 0 5px 33px;}
@@ -35,16 +38,17 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 #headerContent .otherInlet{ float:right; margin-top:10px; margin-right:70px;}
 #headerContent .otherInlet .help{ font-size:16px; background:url("../images140307/iconImage.png") no-repeat scroll 0 -58px; padding-left:25px; color:#666;}
 #nav{width:100%; height:40px; line-height:40px; background-color:#FF6B4F;}
-#nav li{ float:left; font-size:16px; margin:0 20px; position:relative;}
+#nav li{ float:left; font-size:16px; margin:0 25px; position:relative;}
 #nav li.task{ width:204px; margin-left:0; background:url("../images140307/iconImage.png") no-repeat scroll 175px -193px #65B1EE; z-index:504;}
-#nav li.task ul{ background-color:#F1F7FB; border:2px solid #65B1EE; border-top:none; position:absolute; top:40px; left:0; z-index:505; display:none;}
+#nav li.task ul{ background-color:#F1F7FB; border:2px solid #65B1EE; border-top:none; position:absolute; top:40px; left:0; z-index:9999; display:none;}
 #nav li.task ul li{font-size:12px; border-top:1px #D5E3E9 dotted; width:100%; margin:0;}
 #nav li.task ul li a{font-size:12px; color:#666; padding-left: 15px; width: 185px; display:inline-block; position:relative;}
+#nav li.task ul li:hover{ background:#fff;}
+#nav li.task ul li a:hover{ color:#65b1ee; font-weight:bold;}
 #nav li.task ul li span{ right:0; margin-right:15px; position:absolute; top:0;}
 #nav li a{ color:#FFF;}
 #nav li.task a.taskBtn{ background: url("../images140307/iconImage.png") no-repeat scroll 15px -157px; padding-left: 40px;}
-#nav li.task em{background-color: #FFFFFF;border-radius: 6px;color: #65B1EE;display: inline-block;font-size: 15px;line-height: 100%;margin: 0 8px;padding: 1px 5px;}
-
+#nav li.task em{background-color: #FFFFFF; -moz-border-radius: 12px; -webkit-border-radius: 12px; border-radius: 12px; color: #65B1EE; display: inline-block; font-size: 13px; font-weight:bold;line-height: 100%; margin: 0 8px; padding:2px 4px 4px;}
 
 .main h1{ font-size:16px; line-height:40px;}
 .main h1 span{ font-size:12px; margin-left:10px;}
