--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -1,5 +1,5 @@
 /*body{ font-family: '微软雅黑','宋体'; }*/
-body, button, input, select, textarea {font: 12px/1.5 tahoma,'Hiragino Sans GB','microsoft yahei',sans-serif; font-size:12px; color:#666; background-color:#f4f4f4;}
+body{font: 12px/1.5 tahoma,'Hiragino Sans GB','microsoft yahei',sans-serif; font-size:12px; color:#666; background-color:#f4f4f4;}
 .page{ width:1150px; margin:auto;}
 .pageMain{ padding:15px 0;}
 .fl{float:left;}
@@ -12,12 +12,16 @@ body, button, input, select, textarea {font: 12px/1.5 tahoma,'Hiragino Sans GB',
 .h340{ height:340px;}
 strong, b{font-weight: bold;}
 .corLightRed{ color:#ff6b4f;}
+.corGlobGray{ color:#666;}
+.division{ margin:0 10px; color:#ccc;}
 .module{ border:2px solid #ff6b4f;}
+.curPt{ cursor:pointer;}
+.boxShadowGlobal{-moz-box-shadow:1px 1px 6px #ddd,1px -1px 6px #ddd;-webkit-box-shadow:1px 1px 6px #ddd,1px -1px 6px #ddd;box-shadow: 1px 1px 6px #ddd,1px -1px 6px #ddd;}
 select, textarea, input[type="text"], input[type="password"], input[type="datetime"], input[type="datetime-local"], input[type="date"], input[type="month"], input[type="time"], input[type="week"], input[type="number"], input[type="email"], input[type="url"], input[type="search"], input[type="tel"], input[type="color"], .uneditable-input{ color:#666;}
 #header{ width:100%;}
-#header #topbar{ background-color:#F6F6F6; width:100%; border-bottom:1px solid #E0E0E0; height:30px; line-height:30px; color:#666;}
+#topbar{ background-color:#F6F6F6; width:100%; /*border-bottom:1px solid #E0E0E0;*/ height:30px; line-height:30px; color:#666;}
 #userbar{ float:right; position:relative;}
-#userbar li{ float:left; line-height: 28px;}
+#userbar li{ float:left; line-height: 28px;}	
 #userbar li.split { background: none repeat scroll 0 0 #CCC; color: #CCC; height: 12px; margin: 9px; width: 1px; overflow:hidden;}
 #userbar li a{ background:url(../images140307/iconImage.png) no-repeat; cursor:pointer;}
 #userbar li a.message{ padding-left: 20px; background-position: left 3px; color:#666;}
@@ -30,11 +34,19 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 #userbar  #userFrame ul.menu li.logOut { border-top: 1px solid #EEEEEE; line-height: 250%; margin-top: 5px;}
 #headerContent{ padding:15px 0; background-color:#FFF;}
 #headerContent #logo{ float:left;}
-#headerContent #search {border: 3px solid #EAEAEA; border-radius: 3px;float: left;height: 36px;margin-left:180px; background-color:#FFF;}
-#headerContent .searchMenu{background: url("../images140307/iconImage.png") no-repeat scroll 41px -94px;float: left;height: 26px;line-height: 26px;padding: 5px 0px 5px 10px;position: relative; width: 45px;}
+
+/* top search */
+#headerContent #search {border: 4px solid #ff6b4f; border-radius: 3px;float: left;height: 36px;margin-left:180px; background-color:#FFF;}
+#headerContent .searchMenu{background: url("../images140307/iconImage.png") no-repeat scroll 53px -94px #f7f7f7;float: left; width: 63px; height: 26px;line-height: 26px;padding: 5px 0 5px 16px; position: relative;  border-right:1px solid #f1f1f1;}
 #headerContent .form{float:left;}
 #headerContent #search .text {background-color: #FFFFFF;background-position: 0 -360px;background-repeat: repeat-x;color: #999999;font-size: 14px;line-height: 30px;padding: 5px;border: none;width: 460px; float:left; height:26px;}
-#headerContent #search .button {background: none repeat scroll 0 0 #FF6B4F;border: medium none;color: #FFFFFF;font-size: 14px;font-weight: 700;height: 36px; width: 92px;margin:0;padding:0; float:left;}
+#headerContent #search .button {background: none repeat scroll 0 0 #FF6B4F;  letter-spacing: 5px; padding-left:8px; border: medium none;color: #FFFFFF;font-size: 16px;font-weight: 700;height: 36px; width: 68px;margin:0;float:left;}
+#headerContent .searchMenu .dropWrap{ background:#f7f7f7;left: 0; position: absolute; top: 34px; width: 77px; z-index: 9999; border:1px solid #e7e7e7;}
+#headerContent .searchMenu .dropWrap li{ padding-left: 15px;}
+#headerContent .searchMenu .dropWrap li:first-child{ border-bottom:1px solid #e7e7e7;}
+#headerContent .searchMenu .dropWrap li:hover{ color:#FF4300; text-decoration:underline;}
+/* top search/ */
+
 #headerContent .otherInlet{ float:right; margin-top:10px; margin-right:70px;}
 #headerContent .otherInlet .help{ font-size:16px; background:url("../images140307/iconImage.png") no-repeat scroll 0 -58px; padding-left:25px; color:#666;}
 #nav{width:100%; height:40px; line-height:40px; background-color:#FF6B4F;}
