#249 fixed emar websites commission

--- a/src/Jili/EmarBundle/Resources/views/AdminWebsites/edit.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/AdminWebsites/edit.html.twig
@@ -22,7 +22,7 @@
 
 <tr>
     <td>{{ form_label(edit_form.commission , null ,{'label_attr': {'class': 'label'}} ) }}</td>
-    <td>{{ form_widget(edit_form.commission ) }}</td>
+    <td>{{ form_widget(edit_form.commission ) }}%</td>
 </tr>
 
 <tr>
