--- a/src/Jili/EmarBundle/Resources/views/AdminWebsites/new.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/AdminWebsites/new.html.twig
@@ -24,7 +24,7 @@
 
 <tr>
     <td>{{ form_label(form.commission , '返利%' ,{'label_attr': {'class': 'label'}} ) }}</td>
-    <td>{{ form_widget(form.commission ) }}</td>
+    <td>{{ form_widget(form.commission ) }}%</td>
 </tr>
 
 <tr>
