--- a/src/Jili/EmarBundle/Resources/views/Product/retrieve.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/retrieve.html.twig
@@ -19,7 +19,7 @@
   <div class="sidebar w204 fl">
     <div class="module categorys">
       <h3>所有商品分类</h3>
-      {% include('JiliEmarBundle:Product:category.html.twig') %}
+      {{ render(controller('JiliEmarBundle:Product:category', { 'qs': app.request.query.all, 'rt': 'jili_emar_product_retrieve' })) }}
      </div>
   </div>
 
