--- a/src/Jili/EmarBundle/Resources/views/Product/search.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/search.html.twig
@@ -14,6 +14,36 @@
 <script src="{{ asset('js140307/recommend.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/categorysFilter.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/screen.js') }}" language="javascript"></script>
+<script type="text/javascript">
+	  $(function (){
+		for(i=3; i<900; i+=4){
+		  $("ul.commodityUl li").eq(i).css("margin-right", "0");
+		}
+	  });
+</script>
+<script type="text/javascript">
+  $(function (){
+			
+		$(".miniRecommend ul li .img").hover(function() {
+		  var elm = 	$(this).children("p");
+		  //elm.animate({bottom:0},200);
+		  //elm.animate({bottom:-30},200);
+		  //elm.fadeIn("fast");
+		  //elm.fadeOut("fast");
+		  //elm.animate({bottom:0},200);
+		  //elm.animate({bottom:-60},200);
+		  //elm.hide();
+        });
+  });
+  
+  //$(this).children(".more").animate({bottom:0},200);
+//  $(this).children(".more").animate({bottom:-30},200);
+//  $(this).children(".more").fadeIn("fast");
+//  $(this).children(".more").fadeOut("fast");
+//  $(this).children(".more").animate({bottom:0},200);
+//  $(this).children(".more").animate({bottom:-60},200);
+
+</script>
 {% endblock %}
 
 
@@ -26,21 +56,20 @@
 {% endblock %}
 
 {% block page_main %}
-
   <div class="sidebar w204 fl">
-    <div class="module categorysFilter">
-      {% include('JiliEmarBundle:Product:search_category.html.twig') %}
+	<div class="module categorysFilter">
+      <h3>所有商品分类</h3>
+      {{ render(controller('JiliEmarBundle:Product:category', { 'qs': app.request.query.all, 'rt': 'jili_emar_product_search' })) }}
     </div>
-
 {#
 #}
     <!-- --> 
-    <div class="module miniRecommend">
+    <div class="miniRecommend">
       <div class="shade">
         <ul class="clearfix">
           <li>
             <div class="img"><a href="#"><img src="other140307/image100.jpg" width="150" height="150" /></a>
-              <p class="title">BERLA 2013新品夏装女童装花童礼服韩版气质甜美网纱公主裙</p>
+              <p class="title" style="display:none;">BERLA 2013新品夏装女童装花童礼服韩版气质甜美网纱公主裙</p>
             </div>
             <div class="price clearfix">
               <dt>京东商城</dt>
@@ -77,24 +106,10 @@
 {% set w_q = app.request.query.getInt('w')  %}{# website in  request url #}
 
   <div class="main w930 fr">
-      <h1>{{ crumbs_local }}{{  crumbs_local|length > 0 ? '-' : '' }} 搜索关键字：{{ app.request.query.get('q')  }}<span>共{{  total }}件宝贝</span></h1>
-      <div class="screen clearfix">
+      <h1 class="corDarkGray">{{ crumbs_local }}{{  crumbs_local|length > 0 ? '-' : '' }} 搜索关键字：{{ app.request.query.get('q')  }}<span>共{{  total }}件宝贝</span></h1>
+      <div class="screen corDarkGray clearfix">
         <dt class="fl">商城筛选：</dt>
         <dd class="fl w820 h28">
-            {% if w_q is not defined or w_q == 0 %}
-            <a  class="hover" onclick="javascript: return false;" href ="#" >全部</a> 
-            {% else %}
-            <a  href ="{{ path( app.request.attributes.get('_route'),  app.request.query.all|merge({'w': 0, "p":1, "pr":""})) }}">全部</a> 
-            {% endif %}
-
-            {% for webid,row in webs_filter %}
-            {% if w_q is defined and w_q == row.web_id %}
-                <a href="#" class="hover" onclick="javascript:return false;" >{{ row.web_name|e }}</a> 
-                {% else %}
-                <a href="{{ path( app.request.attributes.get('_route'), app.request.query.all|merge({'w': row.web_id, "p":1, "pr":"" })) }}">{{ row.web_name|e }}</a> 
-                {% endif %}
-            {% endfor  %}
-
             <a class="unfoldBtn">展开</a> </dd>
         <dt class="fl">排序：</dt>
         <dd class="fl w820 h28"> 
@@ -103,7 +118,7 @@
         </dd>
       </div>
 
-      <ul class="module commodityUl clearfix">
+      <ul class="commodityUl clearfix">
         {{ include('JiliEmarBundle:Product:search_pagination.html.twig', {'products': products , 'total': total } ) }}
       </ul>
 
