--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -8,6 +8,7 @@
 
 {% block javascript %}
 <script src="{{ asset('js140307/index.js') }}" language="javascript"></script>
+<script src="{{ asset('js140307/categorys.js') }}" language="javascript"></script>
 {% endblock %}
  
 {% block page_main %}
