--- a/web/css140307/recommend.css
+++ b/web/css140307/recommend.css
@@ -24,7 +24,7 @@
 .sidebarRecommend ul li p.rebate{ color:#999;}
 .sidebarRecommend ul li p.rebate em{color:#ea4b11;}
 
-.miniRecommend{ background-color:#FFF; color:#999999; position:relative;}
+.miniRecommend{ background-color:#FFF; color:#999999; position:relative; padding: 5px 0;}
 .miniRecommend .shade{ width:150px; margin:20px auto; height:200px; overflow:hidden; position:relative;}
 .miniRecommend ul{ width:100%; position:absolute; left:0; top:0;}
 .miniRecommend ul li{ float:left; height:200px;}
