--- a/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
@@ -54,7 +54,7 @@
   </div><!-- main w834 -->
   
   <div style="display: inline-block; width: 100%;">
-      {% include "JiliEmarBundle:Websites:shopList_page_nav.html.twig"   %}
+      {# include "JiliEmarBundle:Websites:shopList_page_nav.html.twig"   #}
   </div>
   
   <!--<div class="sidebar w300 fr">
