--- a/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/retrieve_page.html.twig
@@ -19,7 +19,6 @@
 
 {% for row in products %}
         <li>
-
         <dt class="image"><img src="{{ row.pic_url }}" width="200" height="200" alt="pic url" /><a class="shop" href="{{ webs[row.web_id].url |replace( { 'APImemberId': app.session.get('uid') } ) }}" target="_blank" rel="nofollow" >{{ row.web_name }}</a></dt>
           <dd class="clearfix">
             <p class="title">
@@ -31,7 +30,7 @@
 
             <p class="price">￥{{ row.cur_price }}</p>
 
-            <p class="rebate">返利最高：<em>{{ webs[row.web_id].commission }}</em></p>
+            <p class="rebate">返利最高：<em>{{ webs[row.web_id].commission }}%</em></p>
 
           </dd>
         </li>
