--- a/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_top.html.twig
@@ -1,18 +1,25 @@
 <script type="text/javascript">
+
+    var next = function() {
+    var i = 2;
+    return function(){
+    return i++;
+    }
+    }();
 $(document).ready(function(){
     $(".loading").hide();
+
     //刷新
     $(".more").click(function(){
         $.ajax({
-            url: "{{ path('jili_emar_ghs_promotion') }}?tmpl=top&max=6&p=1",
+            url: "{{ path('jili_emar_ghs_promotion') }}/top/6/"+next(),
             post: "GET",
             beforeSend:function(){$(".loading").show();},
             success:function(data){
                 if(data.prds != null && data.prds.length > 0) {
-                    msg = "";
-                    $("#prds1").remove();
+                    var msg = "";
                     for(var i = 0; i < data.prds.length; i++) {
-                        data2 = data.prds[i];
+                       var  data2 = data.prds[i];
                         if (0 == (i+1) % 3 ){
                             msg += '<li class="mr0">';
                         }else{
@@ -23,14 +30,26 @@ $(document).ready(function(){
                               '<p><del>原价￥'+data2.pri0+'</del> 销量'+data2.buy+'件</p>'+
                           '</li>';
                     }
-                    var tab=document.getElementById("prds2"); 
-                    tab.innerHTML = msg;
+
+                    $("#prds1").html(msg);
                 }
                 $(".loading").hide();
+                return false;
             }
         });
     });
 });
+var promote_counter = function(){
+
+    var i = 1;
+
+    return {
+next: function(){
+
+
+      }
+    }
+};
 </script>
       <h3>超值低价</h3>
       <div class="menu"><a class="more" href="javascript:void(0);">换一批</a></div>
@@ -49,7 +68,6 @@ $(document).ready(function(){
              </li>
          {% endfor %}
          </span>
-         <span id="prds2"></span>
     </ul>
 
 {#
