--- a/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Ghs/promotion_on_top.html.twig
@@ -1,5 +1,4 @@
 <script type="text/javascript">
-
     var next = function() {
     var i = 2;
     return function(){
@@ -39,37 +38,30 @@ $(document).ready(function(){
         });
     });
 });
-var promote_counter = function(){
-
-    var i = 1;
-
-    return {
-next: function(){
-
-
-      }
-    }
-};
 </script>
+{% spaceless %}
       <h3>超值低价</h3>
       <div class="menu"><a class="more" href="javascript:void(0);">换一批</a></div>
       <div class="loading"><img src="{{ asset('other/loading.gif') }}" width="48" height="48"></div>
       <ul class="clearfix">
         <span id="prds1">
          {% for row in ghs_pdts %}
-             {% if 0 == loop.index % 3 %}
-             <li class="mr0">
-             {% else %}
-             <li >
-             {% endif %}
-                 <p class="image"><a href="{{ row.ghs_o_url|replace({ 'APIMemberId':app.session.get('uid') }) }}" target="_blank" rel="nofollow"><img src="{{ row.pic_url }}" height="130" width="200"></a></p>
+            <li{{ 0 == loop.index % 3? ' class="mr0" ':'' }}>
+                 <p class="image">
+                 {% if app.session.has('uid')  %}
+                    <a href="{{ row.ghs_o_url|replace({ 'APIMemberId':app.session.get('uid') }) }}" target="_blank" rel="nofollow">
+                {% else %}
+                    <a href="{{ path('_user_login')  }}" target="_blank" rel="nofollow">
+                 {% endif %}
+                 <img src="{{ row.pic_url }}" height="130" width="200"></a></p>
+
                  <p class="price">¥{{ row.ghs_price }}<em>{{ row.discount }}%折</em></p> 
                  <p><del>原价￥{{ row.ori_price }}</del> 销量{{ row.bought }}件</p>
              </li>
          {% endfor %}
          </span>
     </ul>
-
+{% endspaceless %}
 {#
 [2014-04-01 16:27:56] app.DEBUG: {jarod}34,Jili\EmarBundle\Controller\GhsController,array (
   0 => 
@@ -92,4 +84,3 @@ next: function(){
   ),
 
 #}
-
